# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  configuration.yml  docker-compose.yml  init_db.sh  sqlx-data.json
configuration/: base.yml
migrations/: 20220414034940_create_subscriptions_table.sql  20220423034820_make_status_not_null_in_subscriptions.sql  20220423035149_create_subscription_tokens_table.sql  20220430172346_seed_user.sql  20220506223402_create_idempotency_table.sql  20220507224128_create_newsletter_issues_table.sql
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  main.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
